tests/ui/error-codes/E0184.stderr
error[E0184]: the trait `Copy` cannot be implemented for this type; the type has a destructor
  --> $DIR/E0184.rs:1:10
   |
LL | #[derive(Copy)]
   |          ^^^^
   |          |
   |          `Copy` not allowed on types with destructors
   |          in this derive macro expansion
  --> $SRC_DIR/core/src/marker.rs:LL:COL
   |
   = note: in this expansion of `#[derive(Copy)]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0184`.
